Create Country Cycle

--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,8 @@ RewriteRule ^students$ controllers/studentscontroller.php [L]
 RewriteRule ^students/([^/]*)$ controllers/studentscontroller.php?id=$1 [L]
 RewriteRule ^branches$ controllers/branchescontroller.php [L]
 RewriteRule ^branches/([^/]*)$ controllers/branchescontroller.php?id=$1 [L]
+RewriteRule ^countries$ controllers/countriescontroller.php [L]
+RewriteRule ^countries/([^/]*)$ controllers/countriescontroller.php?id=$1 [L]
 RewriteRule ^api/currencies$ api/currency.php [L]
 RewriteRule ^pages/area/insert/area$ pages/inst/ara.php [L]
 
