Create Currency Cycle

--- a/.htaccess
+++ b/.htaccess
@@ -13,8 +13,8 @@ RewriteRule ^branches$ controllers/branchescontroller.php [L]
 RewriteRule ^branches/([^/]*)$ controllers/branchescontroller.php?id=$1 [L]
 RewriteRule ^countries$ controllers/countriescontroller.php [L]
 RewriteRule ^countries/([^/]*)$ controllers/countriescontroller.php?id=$1 [L]
-RewriteRule ^api/currencies$ api/currency.php [L]
-RewriteRule ^pages/area/insert/area$ pages/inst/ara.php [L]
+RewriteRule ^currencies$ controllers/currenciescontroller.php [L]
+RewriteRule ^currencies/([^/]*)$ controllers/currenciescontroller.php?id=$1 [L]
 
 Options All -Indexes
 
