--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,8 @@ RewriteRule ^countries$ controllers/countriescontroller.php [L]
 RewriteRule ^countries/([^/]*)$ controllers/countriescontroller.php?id=$1 [L]
 RewriteRule ^currencies$ controllers/currenciescontroller.php [L]
 RewriteRule ^currencies/([^/]*)$ controllers/currenciescontroller.php?id=$1 [L]
+RewriteRule ^courses$ controllers/coursescontroller.php [L]
+RewriteRule ^courses/([^/]*)$ controllers/coursescontroller.php?id=$1 [L]
 
 Options All -Indexes
 
