--- a/.htaccess
+++ b/.htaccess
@@ -17,6 +17,8 @@ RewriteRule ^currencies$ controllers/currenciescontroller.php [L]
 RewriteRule ^currencies/([^/]*)$ controllers/currenciescontroller.php?id=$1 [L]
 RewriteRule ^courses$ controllers/coursescontroller.php [L]
 RewriteRule ^courses/([^/]*)$ controllers/coursescontroller.php?id=$1 [L]
+RewriteRule ^paymentmethods$ controllers/paymentmethodscontroller.php [L]
+RewriteRule ^paymentmethods/([^/]*)$ controllers/paymentmethodscontroller.php?id=$1 [L]
 
 Options All -Indexes
 
