create course branch

--- a/.htaccess
+++ b/.htaccess
@@ -7,22 +7,24 @@ RewriteBase /accounts/
 RewriteRule ^$ views/home.php [L]
 RewriteRule ^home$ views/home.php [L]
 RewriteRule ^login$ views/login.php [L]
-RewriteRule ^students$ controllers/studentscontroller.php [L]
-RewriteRule ^students/([^/]*)$ controllers/studentscontroller.php?id=$1 [L]
-RewriteRule ^branches$ controllers/branchescontroller.php [L]
-RewriteRule ^branches/([^/]*)$ controllers/branchescontroller.php?id=$1 [L]
-RewriteRule ^countries$ controllers/countriescontroller.php [L]
-RewriteRule ^countries/([^/]*)$ controllers/countriescontroller.php?id=$1 [L]
-RewriteRule ^cities$ controllers/citiescontroller.php [L]
-RewriteRule ^cities/([^/]*)$ controllers/citescontroller.php?id=$1 [L]
-RewriteRule ^currencies$ controllers/currenciescontroller.php [L]
-RewriteRule ^currencies/([^/]*)$ controllers/currenciescontroller.php?id=$1 [L]
-RewriteRule ^courses$ controllers/coursescontroller.php [L]
-RewriteRule ^courses/([^/]*)$ controllers/coursescontroller.php?id=$1 [L]
-RewriteRule ^paymentmethods$ controllers/paymentmethodscontroller.php [L]
-RewriteRule ^paymentmethods/([^/]*)$ controllers/paymentmethodscontroller.php?id=$1 [L]
-RewriteRule ^instructors$ controllers/instructorscontroller.php [L]
-RewriteRule ^instructors/([^/]*)$ controllers/instructorscontroller.php?id=$1 [L]
+RewriteRule ^students$ controllers/StudentsController.php [L]
+RewriteRule ^students/([^/]*)$ controllers/StudentsController.php?id=$1 [L]
+RewriteRule ^branches$ controllers/BranchesController.php [L]
+RewriteRule ^branches/([^/]*)$ controllers/BranchesController.php?id=$1 [L]
+RewriteRule ^countries$ controllers/CountriesController.php [L]
+RewriteRule ^countries/([^/]*)$ controllers/CountriesController.php?id=$1 [L]
+RewriteRule ^cities$ controllers/CitiesController.php [L]
+RewriteRule ^cities/([^/]*)$ controllers/CitesController.php?id=$1 [L]
+RewriteRule ^currencies$ controllers/CurrenciesController.php [L]
+RewriteRule ^currencies/([^/]*)$ controllers/CurrenciesController.php?id=$1 [L]
+RewriteRule ^courses$ controllers/CoursesController.php [L]
+RewriteRule ^courses/([^/]*)$ controllers/CoursesController.php?id=$1 [L]
+RewriteRule ^coursesbranches$ controllers/CoursesBranchesController.php [L]
+RewriteRule ^coursesbranches/([^/]*)$ controllers/CoursesBranchesController.php?id=$1 [L]
+RewriteRule ^paymentmethods$ controllers/PaymentmethodsController.php [L]
+RewriteRule ^paymentmethods/([^/]*)$ controllers/PaymentmethodsController.php?id=$1 [L]
+RewriteRule ^instructors$ controllers/InstructorsController.php [L]
+RewriteRule ^instructors/([^/]*)$ controllers/InstructorsController.php?id=$1 [L]
 
 Options All -Indexes
 
