create vendors cycle

--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,8 @@ RewriteRule ^home$ views/home.php [L]
 RewriteRule ^login$ views/login.php [L]
 RewriteRule ^students$ controllers/StudentsController.php [L]
 RewriteRule ^students/([^/]*)$ controllers/StudentsController.php?id=$1 [L]
+RewriteRule ^vendors$ controllers/VendorsController.php [L]
+RewriteRule ^vendors/([^/]*)$ controllers/VendorsController.php?id=$1 [L]
 RewriteRule ^branches$ controllers/BranchesController.php [L]
 RewriteRule ^branches/([^/]*)$ controllers/BranchesController.php?id=$1 [L]
 RewriteRule ^countries$ controllers/CountriesController.php [L]
