Update all System Cycles

--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,8 @@ RewriteRule ^students$ controllers/StudentsController.php [L]
 RewriteRule ^students/([^/]*)$ controllers/StudentsController.php?id=$1 [L]
 RewriteRule ^vendors$ controllers/VendorsController.php [L]
 RewriteRule ^vendors/([^/]*)$ controllers/VendorsController.php?id=$1 [L]
+RewriteRule ^vendors?([^/]*)$ controllers/VendorsController.php?val=$1 [L]
+RewriteRule ^vendors/([^/]*)/([^/]*)$ controllers/VendorsController.php?id=$1&pays=$2 [L]
 RewriteRule ^branches$ controllers/BranchesController.php [L]
 RewriteRule ^branches/([^/]*)$ controllers/BranchesController.php?id=$1 [L]
 RewriteRule ^countries$ controllers/CountriesController.php [L]
@@ -27,8 +29,15 @@ RewriteRule ^paymentmethods$ controllers/PaymentmethodsController.php [L]
 RewriteRule ^paymentmethods/([^/]*)$ controllers/PaymentmethodsController.php?id=$1 [L]
 RewriteRule ^instructors$ controllers/InstructorsController.php [L]
 RewriteRule ^instructors/([^/]*)$ controllers/InstructorsController.php?id=$1 [L]
+RewriteRule ^instructors?([^/]*)$ controllers/InstructorsController.php?val=$1 [L]
+RewriteRule ^instructors/([^/]*)/([^/]*)$ controllers/InstructorsController.php?id=$1&pays=$2 [L]
 RewriteRule ^services$ controllers/ServicesController.php [L]
 RewriteRule ^services/([^/]*)$ controllers/ServicesController.php?id=$1 [L]
+RewriteRule ^employes$ controllers/EmployesController.php [L]
+RewriteRule ^employes/([^/]*)$ controllers/EmployesController.php?id=$1 [L]
+RewriteRule ^employes?([^/]*)$ controllers/EmployesController.php?val=$1 [L]
+RewriteRule ^employes/([^/]*)/([^/]*)$ controllers/EmployesController.php?id=$1&pays=$2 [L]
+RewriteRule ^payments$ controllers/PaymentsController.php [L]
 
 Options All -Indexes
 
