create entrance page

--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,8 @@ RewriteRule ^home$ views/home.php [L]
 RewriteRule ^login$ views/login.php [L]
 RewriteRule ^students$ controllers/StudentsController.php [L]
 RewriteRule ^students/([^/]*)$ controllers/StudentsController.php?id=$1 [L]
+RewriteRule ^students?([^/]*)$ controllers/StudentsController.php?val=$1 [L]
+RewriteRule ^students/([^/]*)/([^/]*)$ controllers/StudentsController.php?id=$1&pays=$2 [L]
 RewriteRule ^vendors$ controllers/VendorsController.php [L]
 RewriteRule ^vendors/([^/]*)$ controllers/VendorsController.php?id=$1 [L]
 RewriteRule ^vendors?([^/]*)$ controllers/VendorsController.php?val=$1 [L]
@@ -23,6 +25,7 @@ RewriteRule ^currencies$ controllers/CurrenciesController.php [L]
 RewriteRule ^currencies/([^/]*)$ controllers/CurrenciesController.php?id=$1 [L]
 RewriteRule ^courses$ controllers/CoursesController.php [L]
 RewriteRule ^courses/([^/]*)$ controllers/CoursesController.php?id=$1 [L]
+RewriteRule ^courses/([^/]*)/([^/]*)$ controllers/CoursesController.php?id=$1&pays=$2 [L]
 RewriteRule ^coursesbranches$ controllers/CoursesBranchesController.php [L]
 RewriteRule ^coursesbranches/([^/]*)$ controllers/CoursesBranchesController.php?id=$1 [L]
 RewriteRule ^paymentmethods$ controllers/PaymentmethodsController.php [L]
@@ -38,7 +41,7 @@ RewriteRule ^employes/([^/]*)$ controllers/EmployesController.php?id=$1 [L]
 RewriteRule ^employes?([^/]*)$ controllers/EmployesController.php?val=$1 [L]
 RewriteRule ^employes/([^/]*)/([^/]*)$ controllers/EmployesController.php?id=$1&pays=$2 [L]
 RewriteRule ^payments$ controllers/PaymentsController.php [L]
-
+RewriteRule ^entrances$ controllers/EntrancesController.php [L]
 Options All -Indexes
 
 <Files config.inc.php>
